tests/positive/Internal/Positivity2/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Package :=
  defaultPackage@{
    name := "positivity2";
    dependencies := []
  };
