tests/negative/PackageNameConflict/dep1/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Package :=
  defaultPackage@{
    name := "dep";
    version := mkVersion 1 0 0;
    dependencies := [];
  };
